[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boilerio"
version = "0.1.0"
description = "A software thermostat and heating control system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andy Peace", email = "andrew.peace@gmail.com" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Flask>=3.0",
    "Werkzeug>=3.0",
    "requests>=2.31",
    "psycopg2-binary>=2.9.9",
    "paho-mqtt>=1.6,<2",
    "flask-restx>=1.3.0",
    "pyserial>=3.5",
    "flask-login>=0.6.3",
    "basicauth>=1.0.0",
    "cachecontrol>=0.13",
    "google-auth-oauthlib>=1.2",
]

[project.urls]
Homepage = "https://github.com/adpeace/boilerio"

[project.optional-dependencies]
test = ["pytest>=8", "requests-mock>=1.11", "mock>=5"]

[project.scripts]
scheduler = "boilerio.scheduler:main"
boilersim = "boilerio.boilersim:main"
boiler_to_mqtt = "boilerio.boiler_to_mqtt:main"

[tool.hatch.build.targets.wheel]
packages = ["boilerio"]

[tool.hatch.build.targets.sdist]
include = ["boilerio", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["boilerio/tests", "boilerio/schedulerweb/tests"]
